[GOHW-4]: add StorageServiceServer
